# red-envelope-frames

./: .gitignore  README.md  package-lock.json  package.json
backend/frames-worker/: package-lock.json  package.json
backend/frames-worker/.wrangler/tmp/bundle-v5cmZ3/: middleware-loader.entry.ts
backend/frames-worker/.wrangler/tmp/bundle-wAd5cs/: middleware-loader.entry.ts
backend/frames-worker/.wrangler/tmp/bundle-yxr1gI/: middleware-insertion-facade.js  middleware-loader.entry.ts
backend/frames-worker/.wrangler/tmp/bundle-zPMGY1/: middleware-loader.entry.ts
backend/frames-worker/.wrangler/tmp/dev-Sw5Mkr/: index.js  index.js.map
backend/frames-worker/src/: RedEnvelope.json  ideas.md  index.tsx
backend/shuttle/: .gitignore  Cargo.toml  Shuttle.toml
backend/shuttle/crates/adapter/: Cargo.toml  RedEnvelope.json
backend/shuttle/crates/adapter/src/: error.rs  lib.rs
backend/shuttle/crates/adapter/src/ethrs/: mod.rs
backend/shuttle/crates/server/: Cargo.toml
backend/shuttle/crates/server/src/: error.rs  lib.rs  router.rs  shuttle.rs  standalone.rs
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/src/: window.d.ts
frontend/src/app/: page.tsx
frontend/src/components/fhevm/: Connect.tsx
hardhat/: hardhat.config.ts  package.json  pnpm-lock.yaml
hardhat/contracts/: EncryptedERC20.sol  RedEnvelope.sol  RedEnvelopeFactory.sol
hardhat/contracts/interfaces/: IRedEnvelope.sol  IRedEnvelopeFactory.sol
hardhat/deploy/: deploy.ts
hardhat/tasks/: getBalance.ts
hardhat/test/redEnvelope/: RedEnvelopeFactory.fixture.ts  RedEnvelopeFactory.ts
react/src/: App.css  App.jsx  Connect.jsx
react/src/abis/: EncryptedERC20.json  RedEnvelopeFactory.json
react/src/utils/: fhevm.jsx
(+9 files in other folders)
